--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "short_name": "app",
+  "name": "BLEESP32APP",
+  "short_name": "BLESP32",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
