--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "protoglue-front",
-  "short_name": "protoglue-front",
+  "name": "icoffee-front",
+  "short_name": "icoffee-front",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
